# robosc

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yaml  slides.yml
extension/: .gitignore  .vscodeignore  package.json  tsconfig.json  webpack.config.js
extension/src/: models.ts  robot-supervisory-controller-extension.ts  ros-1-listener.ts  ros-2-listener.ts  ros-listener.ts
extension/syntaxes/: rsc.tmLanguage.json  rscd.tmLanguage.json
extension/visualization/: package.json  webpack.config.js
extension/visualization/src/: component.js  index.js  middleware-toggle.js
language/: .gitignore  .project  build.gradle  pom.xml  settings.gradle
language/escet-wrapper/: .gitignore  build.gradle  settings.gradle
language/nl.tue.robotsupervisorycontrollerdsl/: .project  build.gradle  build.properties  plugin.xml  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.cifwrapper/: .gitignore  README.md  build.gradle  build_escet.sh
language/nl.tue.robotsupervisorycontrollerdsl.ide/: .project  build.gradle  build.properties  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.mwe2/: .project  build.gradle
language/nl.tue.robotsupervisorycontrollerdsl.sdk/: feature.xml  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.target/: .project  nl.tue.robotsupervisorycontrollerdsl.target.target  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.tests/: .project  build.gradle
language/nl.tue.robotsupervisorycontrollerdsl.ui/: .project  plugin.xml  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.ui.tests/: .project  pom.xml
language/nl.tue.robotsupervisorycontrollerdsl.updatesite/: category.xml  pom.xml
scenarios/: .gitattributes  .gitignore
scenarios/scenario-1-line-follower/: README.md  line_follower_controller.rscd
scenarios/scenario-1-line-follower/scenario/: package.xml
scenarios/scenario-2-simple-navigation/: README.md  controller-config.json  simple_navigation.rscd
scenarios/scenario-2-simple-navigation/controller/: CMakeLists.txt
scenarios/scenario-2-simple-navigation/controller/include/controller/: controller_engine.c  controller_engine.h
scenarios/scenario-2-simple-navigation/controller/src/: controller_member_function.cpp  member_function.cpp
scenarios/scenario-3-obstacle-navigation/: README.md  obstacle_navigation.rscd
scenarios/scenario-4-object-finder/: .gitignore  README.md  object_finder.repos  object_finder.rscd
scenarios/scenario-4-object-finder/emergency_stop/: package.xml
scenarios/scenario-5-maze-solver/: README.md  maze_solver.rscd
scenarios/scenario-5-maze-solver/fixed_rotator/: package.xml  setup.cfg
scenarios/scenario-5-maze-solver/fixed_rotator/fixed_rotator/: rotator_member_function.py
scenarios/scenario-6-push-ball-goal/: README.md  controller-config.json  push_ball_goal.rscd
scenarios/scenario-7-person-following/: .gitignore  README.md  person_following.repos  person_following.rscd  yolox.patch
scenarios/scenario-8-supervisor/: README.md  controller-config.json  line_follower_supervisor.rscd  obstacle_navigation_supervisor.rscd
scenarios/scenario-8-supervisor/line_detector/: package.xml  setup.py
scenarios/shared/: emergency_stop_library.rscd  turtlebot_library.rscd
slides/: .gitattributes  README.md  angular.json  karma.conf.js  package-lock.json  package.json
slides/src/: index.html  styles.scss
(+436 files in other folders)
