<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fixed_rotator</name>
  <version>1.0.0</version>
  <description>Turn left or right for 90 degrees.</description>
  <maintainer email="b.b.a.wesselink@student.tue.nl">b.wesselink</maintainer>
  <license>LGPL-3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
