<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_detector</name>
  <version>1.0.0</version>
  <description>Sensor that detects the presence of a line using a camera feed.</description>
  <maintainer email="b.b.a.wesselink@student.tue.nl">b.wesselink</maintainer>
  <license>LGPL-3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>cv2_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
